--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap');
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* base */
+@layer base {
+  html {
+    @apply scroll-smooth;
+  }
+  body {
+  }
+}
+/* custom class */
+@layer components {
+  .colorChild a {
+    @apply text-grayLight;
+  }
+  .colorChild a:hover {
+    @apply text-primary transition-all;
+  }
+  .menuMobile a {
+    @apply w-full inline-block py-4 text-center;
+  }
+  .itemFooter {
+    @apply text-grayLight text-base font-normal hover:text-black transition-all;
+  }
 }
